# rust-app

./: README.md
backend/: Cargo.toml
backend/src/: app.rs  lib.rs  state.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
rustwebapp/: Cargo.toml
rustwebapp/src/: main.rs
src/: app.rs  lib.rs  main.rs  state.rs
