[package]
name = "backend"
version = "0.1.0"
authors = ["Martin Tang <martin.tang@oaknorth.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mongodb = { version = "^1", default-features = false, features = ["async-std-runtime"] }
async-std = { version = "^1", features = ["attributes"] }
tide = "^0"
serde_json = "1.0.55"
serde = "1.0.112"
